--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,16 @@
-body {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
 }
 
 img {
@@ -15,6 +25,13 @@ img {
   padding-bottom: 30px;
 }
 
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+/* Search Field */
 .header {
   display: flex;
   justify-content: center;
@@ -29,11 +46,11 @@ img {
   outline: none;
 }
 
+/* Gallery */
 .gallery {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  row-gap: 30px;
+  flex-wrap: wrap;
 }
 
 .lightbox {
@@ -42,8 +59,9 @@ img {
 }
 
 .photo-card {
+  margin-top: 30px;
   margin-left: 30px;
-  margin-right: 30px;
+
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
